<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="codebrain.com.br.lista_compra.NovoProduto">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/BR_cadastrar_produto"
        android:textSize="22dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="99dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BR_descricao"
            android:textColor="@color/colorTxt" />

        <EditText
            android:id="@+id/edtDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textCapWords" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignStart="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BR_quantidade"
            android:textColor="@color/colorTxt" />

        <EditText
            android:id="@+id/edtQuantidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:maxLength="10" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSalvarProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BR_btnSalvar"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignRight="@+id/linearLayout3"
        android:layout_alignEnd="@+id/linearLayout3"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_alignStart="@+id/linearLayout3" />

</RelativeLayout>
